k8s-example/k8s+prometheus/grafana/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    name: dev-grafana-dm
  name: dev-grafana-dm
  namespace: monitoring
  selfLink: /apis/extensions/v1beta1/namespaces//deployments/dev-grafana-dm
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dev-grafana-dm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: dev-grafana-dm
    spec:
      containers:
      - image: 192.168.19.111/monitor/grafana:5.1.0
        imagePullPolicy: Always
        name: grafana-svc
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 4Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: plugins
        - mountPath: /etc/localtime
          name: tz-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: plugins
        nfs:
          path: /opt/dev-grafana-data
          server: 192.168.7.206
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
        name: tz-config
